# get-annotations

./: README.md  pyproject.toml  setup.py
get_annotations/: __init__.py
tests/: test_basic.py
